# utility

./: .gitmodules  Buffer.h  CMakeLists.txt  CMakeLists.txt.in  LICENSE  README.md  bit_tools.h  doxygen_config  str_util.h  traits.h  util.h
abort/: README.md  abort.h  doxygen_config
include/bitops/: bitops.h
include/filesys/: filesys.h
include/superstring/: superstring.h
src/filesys/: filesys.cc
src/superstring/: superstring.cc
tests/: bitops_ut.cc  filesys_ut.cc  superstring_ut.cc
